--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="btn btn-default" data-action="setWalls">Set Walls</div>
             <div class="btn btn-default" data-action="tripleTravelTime">Triple Travel Time</div>
             <div class="btn btn-info" id="showSetSpeed">Change Speed</div>
+            <div class="btn btn-info" id="toggleDebug">Toggle Debug</div>
             <div class="btn btn-success" id="run">Run</div>
             <div class="btn btn-success" id="step">Run One Step</div>
             <div class="btn btn-danger" id="stop">Stop</div>
